early attempt to render DOM

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Triadica.rs</title>
+  <title>Respo.rs</title>
   <link href="https://cdn.tiye.me/logo/calcit.png" rel="icon" type="image/png" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <canvas class="app" ></canvas>
+  <div class="app" ></div>
   <!-- <pre class="debug" ></pre> -->
 
   <script type="module" src="./main.mjs" ></script>
