try trunk for building assets

--- a/demo_respo/index.html
+++ b/demo_respo/index.html
@@ -9,13 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.tiye.me/favored-fonts/main-fonts.css">
   <link rel="stylesheet" type="text/css" href="./assets/style.css">
+
+  <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="demo_respo"/>
 </head>
 
 <body>
   <div class="app" ></div>
   <!-- <pre class="debug" ></pre> -->
 
-  <script type="module" src="./main.mjs" ></script>
+  <!-- <script type="module" src="./main.mjs" ></script> -->
 
 </body>
 
