--- a/demo_respo/index.html
+++ b/demo_respo/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.tiye.me/favored-fonts/main-fonts.css">
   <link rel="stylesheet" type="text/css" href="./assets/style.css">
 
-  <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="demo_respo"/>
+  <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z"/>
 </head>
 
 <body>
